--- a/index.html
+++ b/index.html
@@ -4,299 +4,250 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Study Solution Feedback</title>
-
   <style>
     * {
+      margin: 0;
+      padding: 0;
       box-sizing: border-box;
       font-family: "Poppins", sans-serif;
     }
 
     body {
-      background: linear-gradient(135deg, #000428, #004e92);
+      background: radial-gradient(circle at top, #2b5876, #4e4376);
+      height: 100vh;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
-      margin: 0;
+      perspective: 1000px;
       overflow: hidden;
-      perspective: 1200px;
+    }
+
+    h1 {
       color: #fff;
+      font-size: 2.5em;
+      margin-bottom: 25px;
+      text-shadow: 0 0 10px #ffd700, 0 0 20px #ff6b6b;
+      animation: floatText 3s infinite ease-in-out;
     }
 
-    .container {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 35px;
-      border-radius: 20px;
-      box-shadow: 0 0 30px rgba(0, 255, 255, 0.3);
-      width: 90%;
-      max-width: 420px;
-      backdrop-filter: blur(15px);
-      transform-style: preserve-3d;
-      animation: float 5s ease-in-out infinite;
-      transition: transform 0.4s ease;
-    }
-
-    .container:hover {
-      transform: rotateY(8deg) rotateX(8deg);
-      box-shadow: 0 0 35px rgba(255, 255, 255, 0.4);
-    }
-
-    @keyframes float {
+    @keyframes floatText {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
     }
 
-    h1 {
-      text-align: center;
-      font-size: 28px;
-      color: #00ffff;
-      margin-bottom: 20px;
-      text-shadow: 0 0 10px #00ffff;
+    .card {
+      background: rgba(255, 255, 255, 0.12);
+      backdrop-filter: blur(15px);
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+      width: 350px;
+      transform-style: preserve-3d;
+      transition: all 0.2s ease;
     }
 
-    form {
-      display: flex;
-      flex-direction: column;
-      transform: translateZ(30px);
+    label {
+      color: #fff;
+      font-weight: 600;
+      display: block;
+      margin-top: 10px;
+    }
+
+    input, textarea, button {
+      width: 100%;
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      margin-top: 8px;
+      font-size: 1em;
     }
 
     input, textarea {
-      margin: 10px 0 5px;
-      padding: 12px;
-      border-radius: 10px;
-      border: none;
-      outline: none;
-      font-size: 16px;
       background: rgba(255, 255, 255, 0.9);
-      color: #333;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    input:focus, textarea:focus {
-      transform: scale(1.05);
-      box-shadow: 0 0 10px #00ffff;
-      background: #fff;
-    }
-
-    .error {
-      font-size: 13px;
-      color: #ffb3b3;
-      height: 16px;
-      margin-bottom: 8px;
-      text-shadow: 0 0 3px #000;
+      outline: none;
     }
 
     button {
-      background: linear-gradient(45deg, #00c6ff, #0072ff);
-      border: none;
-      color: white;
-      padding: 12px;
-      border-radius: 10px;
+      background: linear-gradient(135deg, #ff6b6b, #ffd700);
+      color: #fff;
+      font-weight: bold;
       cursor: pointer;
-      font-size: 16px;
-      margin-top: 10px;
-      transition: transform 0.3s, box-shadow 0.3s;
+      margin-top: 20px;
+      transition: 0.3s;
     }
 
     button:hover {
       transform: scale(1.05);
-      box-shadow: 0 0 15px #00ffff;
+      box-shadow: 0 0 20px #ffd700;
     }
 
-    .thank-you {
+    .error {
+      color: #ff4d4d;
+      font-size: 0.9em;
+      margin-top: 5px;
+    }
+
+    .thankyou {
+      color: #fff;
+      font-size: 1.5em;
+      margin-top: 25px;
       text-align: center;
-      font-size: 20px;
-      color: #00ffff;
-      display: none;
-      animation: fadeIn 1s ease forwards, pop 0.8s ease;
-      text-shadow: 0 0 15px #00ffff;
+      animation: fadeIn 0.7s ease;
     }
 
     @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
+      from { opacity: 0; transform: scale(0.8); }
+      to { opacity: 1; transform: scale(1); }
     }
 
-    @keyframes pop {
-      0% { transform: scale(0.8); }
-      50% { transform: scale(1.1); }
-      100% { transform: scale(1); }
-    }
-
-    /* ⭐ Rating Stars */
+    /* Diya Rating */
     .rating {
       display: flex;
       justify-content: center;
-      margin: 10px 0;
-      transform: translateZ(20px);
+      margin: 15px 0;
+      gap: 8px;
     }
 
-    .star {
-      font-size: 32px;
-      color: #555;
+    .rating input {
+      display: none;
+    }
+
+    .rating label {
+      font-size: 2.2em;
       cursor: pointer;
-      transition: color 0.3s, transform 0.3s;
-      text-shadow: 0 0 5px #000;
+      transition: transform 0.3s, text-shadow 0.3s;
     }
 
-    .star:hover {
-      transform: scale(1.3) rotateY(15deg);
-      color: gold;
+    .rating label:hover,
+    .rating label:hover ~ label {
+      transform: scale(1.2);
     }
 
-    .star.active {
-      color: gold;
-      text-shadow: 0 0 15px gold;
+    .rating label.selected {
+      text-shadow: 0 0 20px #ffbf00, 0 0 40px orange;
     }
 
-    label {
-      font-size: 15px;
-      color: #00ffff;
-      margin-top: 5px;
-      text-align: center;
-    }
-
-    /* Background floating bubbles */
-    .bubble {
-      position: absolute;
-      border-radius: 50%;
-      background: rgba(0, 255, 255, 0.3);
-      animation: rise 8s infinite ease-in;
-    }
-
-    @keyframes rise {
-      0% {
-        transform: translateY(100vh) scale(0);
-        opacity: 0.5;
-      }
-      100% {
-        transform: translateY(-10vh) scale(1);
-        opacity: 0;
-      }
+    /* 3D tilt effect */
+    .container {
+      transform-style: preserve-3d;
     }
   </style>
 </head>
 <body>
-  <!-- Floating bubbles -->
-  <div class="bubble" style="width: 20px; height: 20px; left: 10%; animation-delay: 0s;"></div>
-  <div class="bubble" style="width: 40px; height: 40px; left: 50%; animation-delay: 2s;"></div>
-  <div class="bubble" style="width: 25px; height: 25px; left: 80%; animation-delay: 4s;"></div>
-  <div class="bubble" style="width: 15px; height: 15px; left: 30%; animation-delay: 1s;"></div>
-  <div class="bubble" style="width: 50px; height: 50px; left: 70%; animation-delay: 3s;"></div>
+  <h1>Study Solution</h1>
 
   <div class="container">
-    <h1>Study Solution</h1>
+    <form class="card" id="feedbackForm">
+      <label>Name:</label>
+      <input type="text" name="name" required />
 
-    <form id="feedbackForm" action="https://api.web3forms.com/submit" method="POST" novalidate>
-      <input type="hidden" name="access_key" value="ef8440bf-f649-4c60-b8bc-45d2f745985d">
+      <label>Email:</label>
+      <input type="email" name="email" required />
+      <div id="emailError" class="error"></div>
 
-      <input type="text" name="name" placeholder="Your Name" required>
-      
-      <input type="email" name="email" id="email" placeholder="Your Email" required>
-      <div class="error" id="emailError"></div>
+      <label>Phone Number:</label>
+      <input type="text" name="phone" maxlength="10" required />
+      <div id="phoneError" class="error"></div>
 
-      <input type="tel" name="phone" id="phone" placeholder="Your Phone Number" required maxlength="10">
-      <div class="error" id="phoneError"></div>
+      <label>Feedback:</label>
+      <textarea name="message" rows="3" required></textarea>
 
-      <label>Rate Our Service:</label>
+      <label>Rate Us:</label>
       <div class="rating" id="rating">
-        <span class="star" data-value="1">★</span>
-        <span class="star" data-value="2">★</span>
-        <span class="star" data-value="3">★</span>
-        <span class="star" data-value="4">★</span>
-        <span class="star" data-value="5">★</span>
+        <input type="radio" id="diya5" name="rating" value="5">
+        <label for="diya5">🪔</label>
+        <input type="radio" id="diya4" name="rating" value="4">
+        <label for="diya4">🪔</label>
+        <input type="radio" id="diya3" name="rating" value="3">
+        <label for="diya3">🪔</label>
+        <input type="radio" id="diya2" name="rating" value="2">
+        <label for="diya2">🪔</label>
+        <input type="radio" id="diya1" name="rating" value="1">
+        <label for="diya1">🪔</label>
       </div>
-      <input type="hidden" name="rating" id="ratingValue">
 
-      <textarea name="message" rows="4" placeholder="Your Feedback" required></textarea>
-      
       <button type="submit">Submit Feedback</button>
     </form>
 
-    <div class="thank-you" id="thankYouMsg">😊 Thank you for your feedback!</div>
+    <div class="thankyou" id="thankYouMessage" style="display: none;">
+      Thank you for your feedback 😊
+    </div>
   </div>
 
   <script>
-    const form = document.getElementById("feedbackForm");
-    const thankYouMsg = document.getElementById("thankYouMsg");
-    const emailInput = document.getElementById("email");
-    const phoneInput = document.getElementById("phone");
-    const emailError = document.getElementById("emailError");
-    const phoneError = document.getElementById("phoneError");
-    const stars = document.querySelectorAll(".star");
-    const ratingValue = document.getElementById("ratingValue");
+    const container = document.querySelector('.container');
+    const card = document.querySelector('.card');
+    const form = document.getElementById('feedbackForm');
+    const thankYou = document.getElementById('thankYouMessage');
+    const emailError = document.getElementById('emailError');
+    const phoneError = document.getElementById('phoneError');
+    const diyaLabels = document.querySelectorAll('.rating label');
 
-    // ⭐ Rating System
-    stars.forEach(star => {
-      star.addEventListener("click", () => {
-        const value = star.getAttribute("data-value");
-        ratingValue.value = value;
-        stars.forEach(s => s.classList.remove("active"));
-        for (let i = 0; i < value; i++) {
-          stars[i].classList.add("active");
+    // 🌟 3D tilt animation
+    document.addEventListener('mousemove', (e) => {
+      const xAxis = (window.innerWidth / 2 - e.pageX) / 25;
+      const yAxis = (window.innerHeight / 2 - e.pageY) / 25;
+      card.style.transform = `rotateY(${xAxis}deg) rotateX(${yAxis}deg)`;
+    });
+
+    document.addEventListener('mouseleave', () => {
+      card.style.transform = 'rotateY(0deg) rotateX(0deg)';
+    });
+
+    // 🪔 Diya Rating logic
+    diyaLabels.forEach((label, index) => {
+      label.addEventListener('click', () => {
+        diyaLabels.forEach(l => l.classList.remove('selected'));
+        for (let i = 0; i <= index; i++) {
+          diyaLabels[i].classList.add('selected');
         }
       });
     });
 
-    // Realtime validation
-    phoneInput.addEventListener("input", () => {
-      phoneInput.value = phoneInput.value.replace(/\D/g, ""); // only digits
-      if (phoneInput.value.length !== 10) {
-        phoneError.textContent = "Please enter a 10-digit phone number.";
-      } else {
-        phoneError.textContent = "";
-      }
-    });
-
-    emailInput.addEventListener("input", () => {
-      const emailPattern = /^[^ ]+@[^ ]+\.[a-z]{2,}$/i;
-      if (!emailInput.value.match(emailPattern)) {
-        emailError.textContent = "Please enter a valid email address.";
-      } else {
-        emailError.textContent = "";
-      }
-    });
-
-    // Submit validation
-    form.addEventListener("submit", async (e) => {
+    // 📩 Form validation & submission
+    form.addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      const emailPattern = /^[^ ]+@[^ ]+\.[a-z]{2,}$/i;
-      const phonePattern = /^\d{10}$/;
+      const email = form.email.value.trim();
+      const phone = form.phone.value.trim();
+
+      const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      const emailExists = localStorage.getItem(email);
+
       let valid = true;
+      emailError.textContent = '';
+      phoneError.textContent = '';
 
-      if (!emailInput.value.match(emailPattern)) {
-        emailError.textContent = "Please enter a valid email address.";
+      if (!emailPattern.test(email)) {
+        emailError.textContent = 'Please enter a valid email address.';
+        valid = false;
+      } else if (emailExists) {
+        emailError.textContent = 'Please use a different email address.';
         valid = false;
       }
 
-      if (!phoneInput.value.match(phonePattern)) {
-        phoneError.textContent = "Please enter a 10-digit phone number.";
-        valid = false;
-      }
-
-      if (ratingValue.value === "") {
-        alert("Please select a star rating.");
+      if (!/^[0-9]{10}$/.test(phone)) {
+        phoneError.textContent = 'Please enter a valid 10-digit phone number.';
         valid = false;
       }
 
       if (!valid) return;
 
-      // Submit via Web3Forms
+      // Store email to prevent re-use
+      localStorage.setItem(email, 'submitted');
+
+      // ✅ Send form data to Web3Forms
       const formData = new FormData(form);
-      const response = await fetch(form.action, {
-        method: form.method,
-        body: formData,
+      formData.append("access_key", "ef8440bf-f649-4c60-b8bc-45d2f745985d");
+
+      await fetch("https://api.web3forms.com/submit", {
+        method: "POST",
+        body: formData
       });
 
-      if (response.ok) {
-        form.reset();
-        stars.forEach(s => s.classList.remove("active"));
-        form.style.display = "none";
-        thankYouMsg.style.display = "block";
-      } else {
-        alert("Something went wrong. Please try again!");
-      }
+      form.style.display = "none";
+      thankYou.style.display = "block";
     });
   </script>
 </body>
