--- a/index.html
+++ b/index.html
@@ -1,245 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Study Solution Feedback</title>
-<style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Study Solution - Feedback</title>
+  <style>
+    body {
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(135deg, #001f3f, #003366);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      overflow: hidden;
+      perspective: 1000px;
+    }
 
-  body {
-    background: radial-gradient(circle at top, #2b5876, #4e4376);
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    perspective: 1000px;
-    overflow: hidden;
-  }
+    .container {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+      width: 350px;
+      text-align: center;
+      transform: rotateY(0deg);
+      animation: float 3s ease-in-out infinite;
+    }
 
-  h1 {
-    color: #fff;
-    font-size: 2.5em;
-    margin-bottom: 25px;
-    text-shadow: 0 0 10px #ffd700, 0 0 20px #ff6b6b;
-    animation: floatText 3s infinite ease-in-out;
-  }
+    @keyframes float {
+      0%, 100% { transform: translateY(0px) rotateY(0deg); }
+      50% { transform: translateY(-10px) rotateY(3deg); }
+    }
 
-  @keyframes floatText {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-10px); }
-  }
+    h1 {
+      font-size: 24px;
+      color: #ffcc00;
+      text-shadow: 0 0 10px #ffcc00;
+      margin-bottom: 15px;
+    }
 
-  .card {
-    background: rgba(255, 255, 255, 0.12);
-    backdrop-filter: blur(15px);
-    padding: 30px;
-    border-radius: 20px;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
-    width: 350px;
-    transform-style: preserve-3d;
-    transition: all 0.2s ease;
-  }
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+      font-size: 14px;
+    }
 
-  label {
-    color: #fff;
-    font-weight: 600;
-    display: block;
-    margin-top: 10px;
-  }
+    button {
+      background-color: #ffcc00;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 10px;
+      color: #333;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
 
-  input, textarea, button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 8px;
-    margin-top: 8px;
-    font-size: 1em;
-  }
+    button:hover {
+      background-color: #ffaa00;
+      transform: scale(1.05);
+    }
 
-  input, textarea {
-    background: rgba(255, 255, 255, 0.9);
-    outline: none;
-  }
+    .error {
+      color: #ff6b6b;
+      font-size: 13px;
+      margin-top: -5px;
+    }
 
-  button {
-    background: linear-gradient(135deg, #ff6b6b, #ffd700);
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    margin-top: 20px;
-    transition: 0.3s;
-  }
+    .thankyou {
+      display: none;
+      font-size: 18px;
+      color: #00ff99;
+      text-shadow: 0 0 10px #00ff99;
+      margin-top: 20px;
+    }
 
-  button:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 20px #ffd700;
-  }
+    .rating {
+      display: flex;
+      justify-content: center;
+      margin: 10px 0;
+      gap: 8px;
+    }
 
-  .error {
-    color: #ff4d4d;
-    font-size: 0.9em;
-    margin-top: 5px;
-  }
+    .diya {
+      width: 35px;
+      height: 35px;
+      background-image: url('https://cdn-icons-png.flaticon.com/512/123/123406.png');
+      background-size: contain;
+      background-repeat: no-repeat;
+      filter: brightness(0.5) drop-shadow(0 0 0px #ffcc00);
+      transition: all 0.3s ease;
+      touch-action: manipulation;
+    }
 
-  .thankyou {
-    color: #fff;
-    font-size: 1.5em;
-    margin-top: 25px;
-    text-align: center;
-    animation: fadeIn 0.7s ease;
-  }
+    .diya.active {
+      filter: brightness(1.5) drop-shadow(0 0 15px #ffcc00);
+      transform: scale(1.2);
+    }
 
-  @keyframes fadeIn {
-    from { opacity: 0; transform: scale(0.8); }
-    to { opacity: 1; transform: scale(1); }
-  }
-
-  /* 🪔 Diya Rating System */
-  .rating {
-    display: flex;
-    justify-content: center;
-    margin: 15px 0;
-    gap: 8px;
-    flex-direction: row-reverse; /* So hovering affects previous diyas */
-  }
-
-  .rating input {
-    display: none;
-  }
-
-  .rating label {
-    font-size: 2em;
-    cursor: pointer;
-    transition: transform 0.3s, text-shadow 0.3s;
-    filter: drop-shadow(0 0 5px #fff0);
-  }
-
-  .rating label:hover,
-  .rating label:hover ~ label {
-    transform: scale(1.2);
-    text-shadow: 0 0 15px orange, 0 0 30px gold;
-  }
-
-  .rating input:checked ~ label {
-    text-shadow: 0 0 20px #ffbf00, 0 0 40px orange;
-    filter: drop-shadow(0 0 10px gold);
-  }
-
-  /* 3D tilt */
-  .container {
-    transform-style: preserve-3d;
-  }
-</style>
+    @media (max-width: 400px) {
+      .container { width: 90%; }
+    }
+  </style>
 </head>
 <body>
-  <h1>Study Solution</h1>
-
   <div class="container">
-    <form class="card" id="feedbackForm">
-      <label>Name:</label>
-      <input type="text" name="name" required />
+    <h1>Study Solution</h1>
+    <form id="feedbackForm">
+      <input type="text" id="name" placeholder="Your Name" required />
+      <input type="email" id="email" placeholder="Your Email" required />
+      <input type="tel" id="phone" placeholder="Your Phone Number" required />
+      <textarea id="feedback" placeholder="Your Feedback" required></textarea>
 
-      <label>Email:</label>
-      <input type="email" name="email" required />
-      <div id="emailError" class="error"></div>
-
-      <label>Phone Number:</label>
-      <input type="text" name="phone" maxlength="10" required />
-      <div id="phoneError" class="error"></div>
-
-      <label>Feedback:</label>
-      <textarea name="message" rows="3" required></textarea>
-
-      <label>Rate Us:</label>
-      <div class="rating">
-        <input type="radio" id="diya5" name="rating" value="5" />
-        <label for="diya5">🪔</label>
-        <input type="radio" id="diya4" name="rating" value="4" />
-        <label for="diya4">🪔</label>
-        <input type="radio" id="diya3" name="rating" value="3" />
-        <label for="diya3">🪔</label>
-        <input type="radio" id="diya2" name="rating" value="2" />
-        <label for="diya2">🪔</label>
-        <input type="radio" id="diya1" name="rating" value="1" />
-        <label for="diya1">🪔</label>
+      <div class="rating" id="rating">
+        <div class="diya" data-value="1"></div>
+        <div class="diya" data-value="2"></div>
+        <div class="diya" data-value="3"></div>
+        <div class="diya" data-value="4"></div>
+        <div class="diya" data-value="5"></div>
       </div>
 
-      <button type="submit">Submit Feedback</button>
+      <div class="error" id="error"></div>
+      <button type="submit">Submit</button>
+      <div class="thankyou" id="thankyou">🎉 Thank you for your feedback 😊</div>
     </form>
-
-    <div class="thankyou" id="thankYouMessage" style="display: none;">
-      Thank you for your feedback 😊
-    </div>
   </div>
 
   <script>
-    const card = document.querySelector('.card');
-    const form = document.getElementById('feedbackForm');
-    const thankYou = document.getElementById('thankYouMessage');
-    const emailError = document.getElementById('emailError');
-    const phoneError = document.getElementById('phoneError');
+    const form = document.getElementById("feedbackForm");
+    const errorDiv = document.getElementById("error");
+    const thankyouDiv = document.getElementById("thankyou");
+    const diyas = document.querySelectorAll(".diya");
+    let ratingValue = 0;
 
-    // 🌟 3D tilt
-    document.addEventListener('mousemove', (e) => {
-      const xAxis = (window.innerWidth / 2 - e.pageX) / 25;
-      const yAxis = (window.innerHeight / 2 - e.pageY) / 25;
-      card.style.transform = `rotateY(${xAxis}deg) rotateX(${yAxis}deg)`;
+    diyas.forEach((diya, index) => {
+      diya.addEventListener("click", () => {
+        ratingValue = index + 1;
+        diyas.forEach((d, i) => {
+          if (i < ratingValue) d.classList.add("active");
+          else d.classList.remove("active");
+        });
+      });
     });
 
-    document.addEventListener('mouseleave', () => {
-      card.style.transform = 'rotateY(0deg) rotateX(0deg)';
-    });
-
-    // ✅ Form validation + submission
-    form.addEventListener('submit', async (e) => {
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
+      const name = document.getElementById("name").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+      const feedback = document.getElementById("feedback").value.trim();
 
-      const email = form.email.value.trim();
-      const phone = form.phone.value.trim();
-
-      const emailPattern = /^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$/;
-      const emailExists = localStorage.getItem(email);
-
-      let valid = true;
-      emailError.textContent = '';
-      phoneError.textContent = '';
+      const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      const phonePattern = /^[0-9]{10}$/;
 
       if (!emailPattern.test(email)) {
-        emailError.textContent = 'Please enter a valid email address.';
-        valid = false;
-      } else if (emailExists) {
-        emailError.textContent = 'Please use a different email address.';
-        valid = false;
+        errorDiv.textContent = "⚠️ Please enter a valid email address!";
+        return;
+      }
+      if (!phonePattern.test(phone)) {
+        errorDiv.textContent = "⚠️ Please enter a valid 10-digit phone number!";
+        return;
       }
 
-      if (!/^[0-9]{10}$/.test(phone)) {
-        phoneError.textContent = 'Please enter a valid 10-digit phone number.';
-        valid = false;
+      const usedEmails = JSON.parse(localStorage.getItem("usedEmails") || "[]");
+      if (usedEmails.includes(email)) {
+        errorDiv.textContent = "⚠️ Please use a different email address!";
+        return;
       }
 
-      if (!valid) return;
+      usedEmails.push(email);
+      localStorage.setItem("usedEmails", JSON.stringify(usedEmails));
+      errorDiv.textContent = "";
 
-      // Store email locally to block reuse
-      localStorage.setItem(email, 'submitted');
-
-      // Submit form to Web3Forms
-      const formData = new FormData(form);
-      formData.append("access_key", "ef8440bf-f649-4c60-b8bc-45d2f745985d");
-
-      await fetch("https://api.web3forms.com/submit", {
+      // Submit to Web3Forms
+      const response = await fetch("https://api.web3forms.com/submit", {
         method: "POST",
-        body: formData,
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          access_key: "ef8440bf-f649-4c60-b8bc-45d2f745985d",
+          name,
+          email,
+          phone,
+          feedback,
+          rating: ratingValue,
+        }),
       });
 
-      form.style.display = "none";
-      thankYou.style.display = "block";
+      const result = await response.json();
+      if (result.success) {
+        form.reset();
+        diyas.forEach((d) => d.classList.remove("active"));
+        thankyouDiv.style.display = "block";
+      } else {
+        errorDiv.textContent = "⚠️ Something went wrong. Please try again.";
+      }
     });
   </script>
 </body>
