--- a/index.html
+++ b/index.html
@@ -1,205 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Study Solution - Feedback</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Study Solution Feedback</title>
   <style>
-    body {
-      font-family: "Poppins", sans-serif;
-      background: linear-gradient(135deg, #001f3f, #003366);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+    * {
       margin: 0;
-      overflow: hidden;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #4b6cb7, #182848);
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       perspective: 1000px;
-    }
-
-    .container {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-      width: 350px;
-      text-align: center;
-      transform: rotateY(0deg);
-      animation: float 3s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0px) rotateY(0deg); }
-      50% { transform: translateY(-10px) rotateY(3deg); }
+      overflow: hidden;
     }
 
     h1 {
-      font-size: 24px;
-      color: #ffcc00;
-      text-shadow: 0 0 10px #ffcc00;
-      margin-bottom: 15px;
+      color: #fff;
+      font-size: 2.5em;
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+      margin-bottom: 20px;
+      transform: rotateY(0deg);
+      animation: floatText 3s infinite ease-in-out;
+    }
+
+    @keyframes floatText {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+
+    form {
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(15px);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+      width: 350px;
+      transform: rotateY(0deg);
+      transition: transform 0.6s ease;
+      animation: formFloat 6s infinite ease-in-out;
+    }
+
+    @keyframes formFloat {
+      0%, 100% { transform: rotateY(0deg) translateY(0); }
+      50% { transform: rotateY(5deg) translateY(-10px); }
+    }
+
+    label {
+      color: #fff;
+      font-weight: bold;
+      margin-top: 10px;
+      display: block;
+    }
+
+    input, textarea, button {
+      width: 100%;
+      margin-top: 8px;
+      padding: 10px;
+      border: none;
+      border-radius: 10px;
+      outline: none;
+      font-size: 1em;
     }
 
     input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 10px;
-      border: none;
-      outline: none;
-      font-size: 14px;
+      background: rgba(255, 255, 255, 0.8);
     }
 
     button {
-      background-color: #ffcc00;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 10px;
-      color: #333;
+      background: #4b6cb7;
+      color: #fff;
       font-weight: bold;
       cursor: pointer;
-      transition: 0.3s;
+      margin-top: 15px;
+      transition: all 0.3s ease;
     }
 
     button:hover {
-      background-color: #ffaa00;
+      background: #3551a4;
       transform: scale(1.05);
     }
 
     .error {
-      color: #ff6b6b;
-      font-size: 13px;
-      margin-top: -5px;
+      color: #ff3b3b;
+      font-size: 0.9em;
+      margin-top: 5px;
     }
 
     .thankyou {
-      display: none;
-      font-size: 18px;
-      color: #00ff99;
-      text-shadow: 0 0 10px #00ff99;
+      color: #fff;
+      font-size: 1.5em;
+      text-align: center;
       margin-top: 20px;
+      animation: popIn 0.5s ease;
     }
 
-    .rating {
+    @keyframes popIn {
+      from { transform: scale(0); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    .stars {
       display: flex;
       justify-content: center;
       margin: 10px 0;
-      gap: 8px;
     }
 
-    .diya {
-      width: 35px;
-      height: 35px;
-      background-image: url('https://cdn-icons-png.flaticon.com/512/123/123406.png');
-      background-size: contain;
-      background-repeat: no-repeat;
-      filter: brightness(0.5) drop-shadow(0 0 0px #ffcc00);
-      transition: all 0.3s ease;
-      touch-action: manipulation;
+    .stars input {
+      display: none;
     }
 
-    .diya.active {
-      filter: brightness(1.5) drop-shadow(0 0 15px #ffcc00);
+    .stars label {
+      font-size: 2em;
+      color: #ddd;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .stars input:checked ~ label,
+    .stars label:hover,
+    .stars label:hover ~ label {
+      color: gold;
       transform: scale(1.2);
-    }
-
-    @media (max-width: 400px) {
-      .container { width: 90%; }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Study Solution</h1>
-    <form id="feedbackForm">
-      <input type="text" id="name" placeholder="Your Name" required />
-      <input type="email" id="email" placeholder="Your Email" required />
-      <input type="tel" id="phone" placeholder="Your Phone Number" required />
-      <textarea id="feedback" placeholder="Your Feedback" required></textarea>
 
-      <div class="rating" id="rating">
-        <div class="diya" data-value="1"></div>
-        <div class="diya" data-value="2"></div>
-        <div class="diya" data-value="3"></div>
-        <div class="diya" data-value="4"></div>
-        <div class="diya" data-value="5"></div>
-      </div>
+  <h1>Study Solution</h1>
 
-      <div class="error" id="error"></div>
-      <button type="submit">Submit</button>
-      <div class="thankyou" id="thankyou">🎉 Thank you for your feedback 😊</div>
-    </form>
-  </div>
+  <form id="feedbackForm">
+    <label>Name:</label>
+    <input type="text" name="name" required>
+
+    <label>Email:</label>
+    <input type="email" name="email" required>
+    <div id="emailError" class="error"></div>
+
+    <label>Phone Number:</label>
+    <input type="text" name="phone" required maxlength="10">
+    <div id="phoneError" class="error"></div>
+
+    <label>Feedback:</label>
+    <textarea name="message" rows="3" required></textarea>
+
+    <label>Rate Us:</label>
+    <div class="stars">
+      <input type="radio" id="star5" name="rating" value="5"><label for="star5">★</label>
+      <input type="radio" id="star4" name="rating" value="4"><label for="star4">★</label>
+      <input type="radio" id="star3" name="rating" value="3"><label for="star3">★</label>
+      <input type="radio" id="star2" name="rating" value="2"><label for="star2">★</label>
+      <input type="radio" id="star1" name="rating" value="1"><label for="star1">★</label>
+    </div>
+
+    <button type="submit">Submit Feedback</button>
+  </form>
+
+  <div class="thankyou" id="thankYouMessage" style="display: none;">Thank you for your feedback 😊</div>
 
   <script>
-    const form = document.getElementById("feedbackForm");
-    const errorDiv = document.getElementById("error");
-    const thankyouDiv = document.getElementById("thankyou");
-    const diyas = document.querySelectorAll(".diya");
-    let ratingValue = 0;
+    const form = document.getElementById('feedbackForm');
+    const thankYou = document.getElementById('thankYouMessage');
+    const emailError = document.getElementById('emailError');
+    const phoneError = document.getElementById('phoneError');
 
-    diyas.forEach((diya, index) => {
-      diya.addEventListener("click", () => {
-        ratingValue = index + 1;
-        diyas.forEach((d, i) => {
-          if (i < ratingValue) d.classList.add("active");
-          else d.classList.remove("active");
-        });
-      });
-    });
-
-    form.addEventListener("submit", async (e) => {
+    form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const name = document.getElementById("name").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const phone = document.getElementById("phone").value.trim();
-      const feedback = document.getElementById("feedback").value.trim();
 
-      const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-      const phonePattern = /^[0-9]{10}$/;
+      const email = form.email.value.trim();
+      const phone = form.phone.value.trim();
+
+      // Email validation
+      const emailPattern = /^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$/;
+      const emailExists = localStorage.getItem(email);
+
+      let isValid = true;
+      emailError.textContent = '';
+      phoneError.textContent = '';
 
       if (!emailPattern.test(email)) {
-        errorDiv.textContent = "⚠️ Please enter a valid email address!";
-        return;
-      }
-      if (!phonePattern.test(phone)) {
-        errorDiv.textContent = "⚠️ Please enter a valid 10-digit phone number!";
-        return;
-      }
-
-      const usedEmails = JSON.parse(localStorage.getItem("usedEmails") || "[]");
-      if (usedEmails.includes(email)) {
-        errorDiv.textContent = "⚠️ Please use a different email address!";
-        return;
+        emailError.textContent = 'Please enter a valid email address.';
+        isValid = false;
+      } else if (emailExists) {
+        emailError.textContent = 'Please use a different email address.';
+        isValid = false;
       }
 
-      usedEmails.push(email);
-      localStorage.setItem("usedEmails", JSON.stringify(usedEmails));
-      errorDiv.textContent = "";
-
-      // Submit to Web3Forms
-      const response = await fetch("https://api.web3forms.com/submit", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          access_key: "ef8440bf-f649-4c60-b8bc-45d2f745985d",
-          name,
-          email,
-          phone,
-          feedback,
-          rating: ratingValue,
-        }),
-      });
-
-      const result = await response.json();
-      if (result.success) {
-        form.reset();
-        diyas.forEach((d) => d.classList.remove("active"));
-        thankyouDiv.style.display = "block";
-      } else {
-        errorDiv.textContent = "⚠️ Something went wrong. Please try again.";
+      // Phone validation
+      if (!/^[0-9]{10}$/.test(phone)) {
+        phoneError.textContent = 'Please enter a valid 10-digit phone number.';
+        isValid = false;
       }
+
+      if (!isValid) return;
+
+      // Save email to prevent reuse
+      localStorage.setItem(email, 'submitted');
+
+      // Send to Web3Forms
+      const formData = new FormData(form);
+      formData.append("access_key", "ef8440bf-f649-4c60-b8bc-45d2f745985d");
+
+      await fetch("https://api.web3forms.com/submit", { method: "POST", body: formData });
+
+      form.style.display = "none";
+      thankYou.style.display = "block";
     });
   </script>
 </body>
